fixing deployment issues

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "drummachine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chauxvive.github.io/DrumMachine",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,7 +38,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.3.0"
   },
   "engines": {
     "node": "20.x"
